<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCategory"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="12dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageMovieBg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_circle" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#D9770202" />

            <TextView
                android:id="@+id/textMovieVoteAverage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@color/back_text"
                android:padding="12dp"
                android:paddingEnd="110dp"
                android:text="@string/vote"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageMovie"
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:padding="16dp"
                android:src="@drawable/ic_circle" />

            <TextView
                android:id="@+id/textMovieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageMovie"
                android:layout_toRightOf="@id/imageMovie"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:text="@string/movieLocals"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textMovieReleaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textMovieTitle"
                android:layout_toEndOf="@id/imageMovie"
                android:layout_toRightOf="@id/imageMovie"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/tanggal_release"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textMovieOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textMovieReleaseDate"
                android:layout_toEndOf="@id/imageMovie"
                android:layout_toRightOf="@id/imageMovie"
                android:ellipsize="end"
                android:maxLines="5"
                android:padding="16dp"
                android:text="@string/overview"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>